--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -17,6 +17,9 @@ jobs:
 
     - name: Github Action for LaTeX
       uses: xu-cheng/latex-action@3.2.0
+      with:
+        root_file: |
+          industry/resume.tex
 
     - name: Generate all files
       run: make
