--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -19,7 +19,8 @@ jobs:
       uses: xu-cheng/latex-action@3.2.0
       with:
         root_file: |
-          industry/resume.tex
+          resume.tex
+        working_directory: industry/
 
     - name: Generate all files
       run: make
